Fix jupyter notebook links pointing to the wrong url
Update the links to point to ../file_name instead of ./file_name.ipynb,
which should fix them pointing to the wrong url.

--- a/docs/explanation/parsing_and_evaluating.ipynb
+++ b/docs/explanation/parsing_and_evaluating.ipynb
@@ -7,9 +7,9 @@
    "source": [
     "# Parsing and evaluating problems\n",
     "\n",
-    "In DESDEO, the problem format (c.f., section [The Problem Format](./problem_format.ipynb))\n",
+    "In DESDEO, the problem format (c.f., section [The Problem Format](../problem_format))\n",
     "can be parsed into other formats and evaluated. The purpose of evaluating is to\n",
-    "allow different solvers, discussed in section [Solvers](./solvers.ipynb), to solve\n",
+    "allow different solvers, discussed in section [Solvers](../solvers), to solve\n",
     "the modeled multiobjective optimization problem. \n",
     "\n",
     "Here, we will first discuss the parsing and the parsers found in DESDEO in\n",
@@ -24,7 +24,7 @@
     "### From the problem format to other formats\n",
     "The most central parsers in DESDEO are those that allow parsing the problem\n",
     "format from the MathJSON format discussed in section [The MathJSON\n",
-    "format](./problem_format.ipynb#the-mathjson-format) to other formats that different\n",
+    "format](../problem_format#the-mathjson-format) to other formats that different\n",
     "solvers (i.e., optimizers)\n",
     "can understand. These kind of parsers can be found in the [JSON parser][desdeo.problem.json_parser]\n",
     "module.\n",
@@ -56,7 +56,7 @@
     "the MathJSON format first. When adding function expression to the [Problem model][desdeo.problem.schema.Problem],\n",
     "if a `func` field is initialized with a string in an infix format, it is automatically converted to the JSON\n",
     "format utilizing the infix parser. The infix parser can also prove useful when defining various\n",
-    "scalarization functions in a dynamic way (c.f., the section [Scalarization](./scalarization.ipynb#scalarization)).\n",
+    "scalarization functions in a dynamic way (c.f., the section [Scalarization](../scalarization#scalarization)). TODO: check if this works\n",
     "\n",
     "\n",
     "<div class=\"admonition note\">\n",
@@ -77,10 +77,10 @@
     "evaluators enable the evaluating of a problem, usually by supplying one or more\n",
     "decision variable vectors. Evaluators are not something a user is expected to directly\n",
     "utilize, rather, evaluators are often tied to solvers and solver interfaces, which\n",
-    "are discussed in the [Solvers](./solvers.ipynb) section.\n",
+    "are discussed in the [Solvers](../solvers) section.\n",
     "\n",
     "It is important to understand in which order the various fields found \n",
-    "in the problem format (c.f., [The Problem schema](./problem_format.ipynb#the-problem-schema)\n",
+    "in the problem format (c.f., [The Problem schema](../problem_format#the-problem-schema)\n",
     "and [Problem][desdeo.problem.schema.Problem]) are evaluated.\n",
     "The first field to be evaluated is the `constants` field, which is made up of\n",
     "[`Constant`][desdeo.problem.schema.Constant] models. Evaluating these fields amounts to\n",
@@ -212,7 +212,7 @@
     "The [`Evaluator`][desdeo.problem.simulator_evaluator.Evaluator] adds support for simulator and surrogate\n",
     "based objectives, constraints and extra functions. This is done by collecting the simulators and surrogates\n",
     "in the evaluator and calling them by providing the decision variables and parameters needed.\n",
-    "The connection to simulators happens via [simulator files](./simulator_support.ipynb#simulator-file).\n",
+    "The connection to simulators happens via [simulator files](../simulator_support#simulator-file).\n",
     "The surrogate models are loaded from disk and then evaluated with the given decision variable values.\n",
     "This evaluator also handles analytical functions by calling the [PolarsEvaluator](#the-generic-evaluator).\n",
     "\n",
@@ -221,7 +221,7 @@
     "[`Evaluator`][desdeo.problem.simulator_evaluator.Evaluator] can be used to evaluate any problems with\n",
     "analytical, simulator and surrogate based objectives, constraints and extra functions.\n",
     "In what follows, it is explained, how the evaluator works.\n",
-    "[Here](../howtoguides/problem.md#example-simulation-based-problem)\n",
+    "[Here](../../howtoguides/problem#example-simulation-based-problem)\n",
     "is an example of defining a simulator based in DESDEO.\n",
     "\n",
     "First, we need to initialize the problem we are solving:"
@@ -382,7 +382,7 @@
     "[Pyomo evaluator][desdeo.problem.pyomo_evaluator],\n",
     "[GurobipyEvaluator][desdeo.problem.gurobipy_evaluator],\n",
     "and [Evaluator][desdeo.problem.simulator_evaluator]. If you are interested in how to\n",
-    "solve a multiobjective optimization problem, then the section [Scalarization](./scalarization.ipynb)\n",
+    "solve a multiobjective optimization problem, then the section [Scalarization](../scalarization)\n",
     "is a good place to check out.\n"
    ]
   }
