--- a/docs/explanation/problem_format.ipynb
+++ b/docs/explanation/problem_format.ipynb
@@ -1514,7 +1514,7 @@
     "the `func` field of an `ExtraFunction`, or the value of a `Constant`, for instance. This is\n",
     "also an important fact to keep in mind when parsing the a `Problem` model from one\n",
     "representation to another. This will be discussed in more detail in the \n",
-    "section [Parsing and Evaluating Problems](./parsing_and_evaluating.md/#parsing-and-evaluating-problems).\n",
+    "section [Parsing and Evaluating Problems](../parsing_and_evaluating#parsing-and-evaluating-problems).\n",
     "\n",
     "It is assumed that any expression in a `func` field, that is not a numerical value,\n",
     "refers to either a symbol or a mathematical operation. In what follows, the\n",
