--- a/docs/explanation/scalarization.ipynb
+++ b/docs/explanation/scalarization.ipynb
@@ -12,7 +12,7 @@
     "optimization problem into a single-objective optimization\n",
     "problem, which can be solved with one of the many existing\n",
     "optimizers. DESDEO has interfaces to existing\n",
-    "optimizers, which are discussed in the section [Solvers](./solvers.ipynb).\n",
+    "optimizers, which are discussed in the section [Solvers](../solvers).\n",
     "\n",
     "Here, we will first explain how scalarization is implemented in DESDEO\n",
     "in the section [Scalarizing problems](#scalarizing-problems),\n",
@@ -67,7 +67,7 @@
     "### The non-differentiable achievement scalarizing function\n",
     "\n",
     "To add the non-differentiable variant of the\n",
-    "[achievement scalarizing function](../tutorials/moo_primer.md/#def:asf),\n",
+    "[achievement scalarizing function](../../tutorials/moo_primer/#def:asf),\n",
     "we invoke the following code:"
    ]
   },
@@ -139,7 +139,7 @@
     "### The epsilon-constraints scalarization\n",
     "\n",
     "As a more complicated example on how scalarizations might have to be added,\n",
-    "consider the [epsilon-constraints scalarization](../tutorials/moo_primer.md/#def:epsilon).  Here, we have to also\n",
+    "consider the [epsilon-constraints scalarization](../../tutorials/moo_primer/#def:epsilon).  Here, we have to also\n",
     "add constraint functions to the problem. Luckily, in practice, this is quite\n",
     "straight-forward, as illustrated below:"
    ]
@@ -202,7 +202,7 @@
     "You can study the available scalarization functions found in the\n",
     "[scalarization module][desdeo.tools.scalarization]. If you are interested\n",
     "in how a scalarized problem can be solved, you can proceed to the\n",
-    "section [Solvers](./solvers.ipynb)."
+    "section [Solvers](../solvers)."
    ]
   }
  ],
