--- a/docs/explanation/templates_and_pub_sub.ipynb
+++ b/docs/explanation/templates_and_pub_sub.ipynb
@@ -8,7 +8,7 @@
     "# Evolutionary Algorithms in DESDEO\n",
     "\n",
     "In this section, we will discuss how evolutionary algorithms (EAs) are implemented in DESDEO.\n",
-    "As discussed in the [tutorial on EAs](../tutorials/EMO.md), EAs are generally composed of modular components that can be reutilized in other EAs, or can be replaced with equivalent components.\n",
+    "As discussed in the [guide on EAs](../../howtoguides/ea), EAs are generally composed of modular components that can be reutilized in other EAs, or can be replaced with equivalent components.\n",
     "An EA can be seen as a pipeline of components that process the population of solutions in each generation.\n",
     "We first describe how DESDEO implements the components of an EA.\n",
     "Then, we describe how DESDEO supports the creation of such pipelines, and point out a few shortcomings with the approach regarding the flow of information between components.\n",
