--- a/docs/explanation/scalarization_methods.ipynb
+++ b/docs/explanation/scalarization_methods.ipynb
@@ -41,7 +41,7 @@
    "metadata": {},
    "source": [
     "Now, to \"implement\" the  ASF method, we first need preference information\n",
-    "for the decisoin maker. Suppose `z_pref` is a list of aspiration levels."
+    "for the decision maker. Suppose `z_pref` is a list of aspiration levels."
    ]
   },
   {
@@ -72,7 +72,7 @@
     "\n",
     "where the variables \\(F(\\mathbf{x}) = [f_1(\\mathbf{x}),\\dots,f_k(\\mathbf{x})], \\mathbf{z}^\\star, \\mathbf{z}^\\text{nad}\\)\n",
     "are assumed to be available through the instance of `problem`. The variable \\(\\mathbf{\\bar{z}}\\) is our reference point,\n",
-    "which is provided by a decisoin maker.\n",
+    "which is provided by a decision maker.\n",
     "\n",
     "Now, to create the ASF method, we first create the ASF and then add it to the instance of `problem`:\n",
     "\n",
@@ -96,7 +96,7 @@
    "metadata": {},
    "source": [
     "In the above example, we create an instance of the ASF where the variables of the function have been replaced by the\n",
-    "correspoinding variables found in the instance of `problem`. When creating scalarization functions of any type, at least\n",
+    "corresponding variables found in the instance of `problem`. When creating scalarization functions of any type, at least\n",
     "the problem and a symbol must be supplied. In this example, the argument `z` (reference point) is also\n",
     "needed. The symbol is important because it is used later in solvers to specify\n",
     "which scalarization functions should be optimized. In the ASF example, `delta` and `rho` are optional parameters of the\n",
@@ -107,12 +107,12 @@
     "<p>\n",
     "    When creating scalarization functions of any kind, the `tag` argument is very important because it is used\n",
     "    to specify to solvers which scalarization functions should be optimized. The `tag` must be unique inside\n",
-    "    the instance of probelm, i.e., no other field of a `problem` dataclass should share the same symbol.\n",
+    "    the instance of problem, i.e., no other field of a `problem` dataclass should share the same symbol.\n",
     "</p>\n",
     "</div>\n",
     "\n",
     "\n",
-    "To solve the scalarization function, we can use of the solver. For instance, the `scipy_solver` can utilize the\n",
+    "To solve the scalarization function, we can use the solver. For instance, the `scipy_solver` can utilize the\n",
     "minimizer routine defined in `scipy.optimize.minimize`. To solve the problem utilizing `scipy_solver`, we do:"
    ]
   },
@@ -131,7 +131,7 @@
    "id": "69ec75af",
    "metadata": {},
    "source": [
-    "As mentinoed, the `tag` defined previously is now important so that we can tell the solver what\n",
+    "As mentioned, the `tag` defined previously is now important so that we can tell the solver what\n",
     "to use as an objective when solving scalarization functions. The `kwargs` are optional arguments\n",
     "to control the internal solver, in this case, the routine `scipy.optimize.minimize`..."
    ]
