Fix annoying TOC length issue

--- a/docs/howtoguides/ea_options.ipynb
+++ b/docs/howtoguides/ea_options.ipynb
@@ -11,33 +11,23 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "c0b5187a",
+   "metadata": {},
+   "source": [
+    "First, we import the necessary namespaces which contain the Pydantic models for the EAs:\n",
+    "\n",
+    "1. `desdeo.emo.options.algorithms`: Contains a complete model for _a posteriori_ EAs. These models can be used to create algorithms with default settings, or as a starting point that can be modified to suit the user's needs. A complete\n",
+    "algorithm model is represented by the [`EMOOptions`]() pydantic model.\n",
+    "3. `desdeo.emo.templates`: Contains the models for templates. Templates are described [here](../../explanation/templates_and_pub_sub). A template"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "16eea4a7",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/rishi/projects/DESDEO/desdeo/__init__.py:9: UserWarning: \n",
-      "            \n",
-      "The following required highly recommended executables cannot be found: bonmin, cbc, ipopt\n",
-      "\n",
-      "            DESDEO relies on powerful 3rd party solvers to solve multiobjective\n",
-      "            optimization problems.  Without these solvers, sub-optimal defaults\n",
-      "            will be used instead, which can lead to not optimal, or even wrong,\n",
-      "            results.\n",
-      "\n",
-      "            It is highly recommended to have these solvers available\n",
-      "            in the environment DESDEO is utilized!\n",
-      "\n",
-      "            For more information, see DESDEO's documentation: https://desdeo.readthedocs.io/en/latest/howtoguides/installing/#third-party-optimizers\n",
-      "            \n",
-      "  _check_executables(required_executables)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from rich.pretty import pprint  # Just for pretty printing\n",
     "\n",
@@ -1211,7 +1201,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.11"
+   "version": "3.13.7"
   }
  },
  "nbformat": 4,
